fix safari drop shadow on cards while retaining overflow-hidden
safari renders correctly using box-shadow, which looks nearly identical
in this case.

--- a/src/styles/tailwind.scss
+++ b/src/styles/tailwind.scss
@@ -48,10 +48,10 @@
   }
 
   .card {
-    @apply rounded-sm bg-white drop-shadow;
+    @apply overflow-hidden rounded-sm bg-white shadow;
 
     &--hover {
-      @apply duration-200 hover:drop-shadow-md;
+      @apply duration-200 hover:shadow-md;
     }
   }
 
